# DataMetadataWorkflowDocs

./: README.md  pyproject.toml
.github/workflows/: deploy-book.yml  static.yml
cedar-artifacts/in2pb-template-elements/: acquisiton-system-element.json  author-element.json  channel-element.json  dataset-experiment-element.json  dataset-general-element.json  electrode-element.json  event-codes-element.json  eye-tracking-element.json  in2pb-element.json  probe-element.json  reference-element.json  session-element.json  subject-general-element.json  subject-surgery-element.json  task-element.json  trial-element.json  video-recording-element.json
cedar-artifacts/in2pb-template-richtext/: dataset-description-header.json  electrophysiology-header.json  eye-tracking-header.json  in2pb-header.json  session-trial-header.json  subject-header.json  task-event-header.json  video-recording-header.json
cedar-artifacts/in2pb-templates/: dataset-description-template.json  electrophysiology-template.json  eye-tracking-template.json  session-trial-template.json  subject-template.json  task-event-template.json  video-recording-template.json
in2pb-data-metadata-docs/: _config.yml  _toc.yml  landing.md
in2pb-data-metadata-docs/part-data-reuse/: ch1-intro-data-reuse.md
in2pb-data-metadata-docs/part-metadata/: ch1-intro-metadata.md  ch3-cedar-metadata-schemas.md
in2pb-data-metadata-docs/schema-markdowns/: Contact Metadata (DEPRECATED).md  Dataset Experiment Info.md  Eye Tracking Metadata.md  Session Metadata.md  (+13 more)
src/: generate_summary_markdown.py  get_cedar_data.py
(+165 files in other folders)
